--- a/form.html
+++ b/form.html
@@ -9,7 +9,38 @@
   <input type="text" id="fname" name="fname" value="arabica"><br>
   <label for="fname">area:</label><br>
   <input type="text" id="lname" name="lname" value="Japan"><br><br>
+  <label for="fname">Aroma:</label>
+    <select name="Aroma"><
+      <option>strong</option>
+      <option>middle</option>
+      <option>light</option>
+    </select>
+  <label for="fname">Flavor:</label>
+    <select name="Flavor">
+      <option>strong</option>
+      <option>middle</option>
+      <option>light</option>
+    </select>
+  <label for="fname">Aftertaste:</label>
+    <select name="Aftertaste">
+      <option>strong</option>
+      <option>middle</option>
+      <option>light</option>
+    </select>
+  <label for="fname">Acidity:</label>
+    <select name="Acidity">
+      <option>strong</option>
+      <option>middle</option>
+      <option>light</option>
+    </select>
+  <label for="fname">Sweetness:</label>
+    <select name="Sweetness">
+      <option>strong</option>
+      <option>middle</option>
+      <option>light</option>
+    </select>
   <input type="submit" value="Submit">
+  </select>
 </form> 
 
 
