--- a/form.html
+++ b/form.html
@@ -11,33 +11,43 @@
   <input type="text" id="lname" name="lname" value="Japan"><br><br>
   <label for="fname">Aroma:</label>
     <select name="Aroma"><
-      <option>strong</option>
-      <option>middle</option>
-      <option>light</option>
+      <option>強い</option>
+      <option>少し強い</option>
+      <option>普通</option>
+      <option>少し弱い</option>
+      <option>弱い</option>
     </select>
   <label for="fname">Flavor:</label>
     <select name="Flavor">
-      <option>strong</option>
-      <option>middle</option>
-      <option>light</option>
+      <option>強い</option>
+      <option>少し強い</option>
+      <option>普通</option>
+      <option>少し弱い</option>
+      <option>弱い</option>
     </select>
   <label for="fname">Aftertaste:</label>
     <select name="Aftertaste">
-      <option>strong</option>
-      <option>middle</option>
-      <option>light</option>
+      <option>強い</option>
+      <option>少し強い</option>
+      <option>普通</option>
+      <option>少し弱い</option>
+      <option>弱い</option>
     </select>
   <label for="fname">Acidity:</label>
     <select name="Acidity">
-      <option>strong</option>
-      <option>middle</option>
-      <option>light</option>
+      <option>強い</option>
+      <option>少し強い</option>
+      <option>普通</option>
+      <option>少し弱い</option>
+      <option>弱い</option>
     </select>
   <label for="fname">Sweetness:</label>
     <select name="Sweetness">
-      <option>strong</option>
-      <option>middle</option>
-      <option>light</option>
+      <option>強い</option>
+      <option>少し強い</option>
+      <option>普通</option>
+      <option>少し弱い</option>
+      <option>弱い</option>
     </select>
   <input type="submit" value="Submit">
   </select>
